# fluvial

./: README.md  default.nix  fluvial.cabal  hie.yaml  jupyter-shell.nix
app/: Main.hs
nix/: sources.json
src/: Fluvial.hs
src/Fluvial/: Grid.hs
test/: Main.hs
